# repo_paquete_ibero_al

./: README.md  ibero_al.py  pyproject.toml  requirements.txt  setup.py  test_al.py
paquete_ibero_al/: setup.py  test_al.py
paquete_ibero_al.egg-info/: PKG-INFO  SOURCES.txt
paquete_ibero_al/paquete_ibero_al.egg-info/: PKG-INFO  top_level.txt
src/funcionalgebra/: example.py
src/funcionalgebra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
