[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funcionalgebra"
version = "0.0.1"
authors = [
  { name="Trejo", email="mautrejodelgado04@gmail.com" },
  { name="Mateo", email="192398-9@iberoleom.edu.mx" },
  
]
description = "Proyecto enfocado en ayudar a resolver problemas de algebra"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
"numpy==1.26.0",
"matplotlib==3.8.1",
"scipy==1.11.3"
]

[project.urls]
"Homepage" = "https://github.com/shifux777/repo_paquete_ibero_al"
"Bug Tracker" = "https://github.com/shifux777/repo_paquete_ibero_al/issues"